# SpiFlash-for-embassy

./: .gitignore  Cargo.toml  README.md
docs/: spif-architecture-analysis.md
examples/nrf5340/: Cargo.toml
examples/stm32f401re/: Cargo.toml
src/: lib.rs
tests/: spi_flash.rs
