[package]
name = "spi-flash-for-embassy"
version = "0.1.0"
edition = "2024"
description = "Async SPI NOR flash driver for Embassy-style embedded Rust projects"
license = "MIT"
repository = "https://github.com/WhaleHippo/SpiFlash-for-embassy"
publish = false

[lib]
name = "spi_flash_for_embassy"
path = "src/lib.rs"

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
futures = "0.3"
